@@ -11,13 +11,13 @@ dnl THE FREE SOFTWARE FOUNDATION ALLOWS FREE USE OF THIS SOFTWARE IN ITS
 dnl "AS IS" CONDITION.  THE FREE SOFTWARE FOUNDATION DISCLAIMS ANY
 dnl LIABILITY OF ANY KIND FOR ANY DAMAGES WHATSOEVER RESULTING FROM THE
 dnl USE OF THIS SOFTWARE.
+
+AC_PREREQ([2.57])
 
 m4_include([../version.m4])
-
-AC_INIT([PACKAGE], [VERSION], [bug-hurd@gnu.org], [gnumach])
+AC_INIT([AC_PACKAGE_NAME], [AC_PACKAGE_VERSION], [AC_PACKAGE_BUGREPORT], [AC_PACKAGE_TARNAME])
 AC_CONFIG_SRCDIR([src/include/linux/version.h])
-AC_PREREQ(2.57)
-
+
 m4_sinclude([../aclocal.m4])
 
 hurd_SYSTYPE
