@@ -1,3 +1,4 @@
-m4_define([PACKAGE],[GNU Mach])
-m4_define([VERSION],[1.3])
-
+m4_define([AC_PACKAGE_NAME],[GNU Mach])
+m4_define([AC_PACKAGE_VERSION],[1.3])
+m4_define([AC_PACKAGE_BUGREPORT],[bug-hurd@gnu.org])
+m4_define([AC_PACKAGE_TARNAME],[gnumach])
